--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
 
     <meta charset="utf-8">
     <title>Hi Phil!</title>
