--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
 
     <meta charset="utf-8">
-    <title>Hi Phil!</title>
+    <title>St Peter's Cremorne</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
